<resources>
    <string name="app_name">Stylowe Plywanie</string>
    <string name="title_activity_create_team">Utwórz zespół</string>

    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="file">file</string>
    <string name="add_student">dodaj ucznia</string>
    <string name="add_training">dodaj trening</string>
    <string name="action_favorite">ulubione</string>
    <string name="action_settings">ustawienia</string>
    <string name="action_addTeam">Dodaj Zespół</string>
    <string name="action_teamMember">Dodaj Ucznia</string>
    <string name="team">Zespół</string>
    <string name="wasCreated">został utworzony</string>
    <string name="action_training">Dodaj trening</string>
    <string name="edit_setdescription">opis zadania</string>
    <string name="style">styl</string>
    <string name="set_description">opis ćwiczenia</string>
    <string name="distance_hint">dystans</string>
    <string name="training_time">godzina rozpoczęcia</string>
    <string name="training_name">nazwa treningu</string>
    <string name="wasAdded">został dodany</string>
    <string name="time">czas</string>
    <string name="date">data</string>
    <string name="strokeCount">ilość ruchów</string>
    <string name="action_add">add</string>
    <string name="poolSize">długość basenu</string>
</resources>
