<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_newStyle"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_newDistance"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789.:"
        android:inputType="datetime"
        android:hint="@string/time"
        android:id="@+id/et_newTime"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="dd/mm/YYYY"
        android:id="@+id/et_newDate"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/strokeCount"
        android:id="@+id/et_newStrokeCount"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/poolSize"
        android:id="@+id/et_poolSize"/>
    <Spinner
        android:id="@+id/spinner_students"
        android:layout_width="wrap_content"
        android:layout_height="50dp">

    </Spinner>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fbAccept"
        android:clickable="true"
        android:src="@drawable/ic_check_black_24dp"
        app:layout_anchorGravity="bottom|right|end"
        />
</LinearLayout>